<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:keepScreenOn="true"
    tools:context="com.kavya.myconferenceevents.HomeActivity" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#54b4eb" >

        <ImageView
            android:id="@+id/applogo"
            android:layout_width="@dimen/applicationlogosize"
            android:layout_height="@dimen/applicationlogosize"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/marginleft"
            android:contentDescription="@string/applicationicon"
            android:src="@drawable/applogo" />

        <TextView
            android:id="@+id/title"
            style="@style/text_header_title"
            android:layout_toLeftOf="@+id/action"
            android:layout_toRightOf="@+id/applogo"
            android:text="@string/label_LatestSessions" />

        <Button
            android:id="@+id/action"
            style="@style/button_header_action"
            android:text="@string/label_SavedSessions" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tableheader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tableheadersize"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/tableitemmarginleft"
        android:layout_marginRight="@dimen/tableitemmarginleft"
        android:layout_marginTop="@dimen/tableitemmarginleft"
        android:background="@drawable/tableheader"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tableheader_id"
            style="@style/text_table_item"
            android:layout_weight="1"
            android:text="@string/list_label_id" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tableheader_name"
            style="@style/text_table_item"
            android:layout_weight="3"
            android:text="@string/list_label_name" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tableheader_room"
            style="@style/text_table_item"
            android:layout_weight="2"
            android:text="@string/list_label_Room" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tableheader_duration"
            style="@style/text_table_item"
            android:layout_weight="1"
            android:text="@string/list_label_Duration" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tableheader_presenter"
            style="@style/text_table_item"
            android:layout_weight="2"
            android:text="@string/list_label_Presenter" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableheader"
        android:layout_marginLeft="@dimen/tableitemmarginleft"
        android:layout_marginRight="@dimen/tableitemmarginleft"
        android:divider="#00000000"
        android:dividerHeight="0.1dp"
        android:scrollbars="none" >
    </ListView>

    <TextView
        android:id="@+id/nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/label_NoResults"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/progressbarlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:drawable/alert_dark_frame"
        android:padding="15dp"
        android:visibility="invisible" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_ProgressText"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>